lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.error
Lander:5: error: illegal start of simple expression
		if( )
                    ^Lander:7: error: ')' expected but '}' found.
	}
        ^